@@ -13,7 +13,6 @@ import java.util.List;
 @Configuration
 public class CassandraConfig extends AbstractCassandraConfiguration {
 
-    // 1. INJECT THE VALUES FROM DOCKER ENV / PROPERTIES
     @Value("${spring.cassandra.contact-points:localhost}")
     private String contactPoints;
 
@@ -23,7 +22,6 @@ public class CassandraConfig extends AbstractCassandraConfiguration {
     @Value("${spring.cassandra.keyspace-name:ratings_ks}")
     private String keyspaceName;
 
-    // 2. OVERRIDE THE GETTERS TO USE THOSE VALUES
     @Override
     protected String getKeyspaceName() {
         return keyspaceName;
@@ -40,16 +38,21 @@ public class CassandraConfig extends AbstractCassandraConfiguration {
     }
 
     @Override
+    protected String getLocalDataCenter() {
+        return "datacenter1";
+    }
+
+    @Override
     public SchemaAction getSchemaAction() {
         return SchemaAction.CREATE_IF_NOT_EXISTS;
     }
 
     @Override
     protected List<CreateKeyspaceSpecification> getKeyspaceCreations() {
-        return Collections.singletonList(
+        return List.of(
                 CreateKeyspaceSpecification.createKeyspace(keyspaceName)
                         .ifNotExists()
-                        .with(KeyspaceOption.REPLICATION)
+                        .withSimpleReplication(1)
         );
     }
 }
